...
          : 0,
      onDestinationSelected: (i) {
        ScaffoldMessenger.of(context).removeCurrentSnackBar();
        context.go(['/library', '/reading', '/journal'][i]);
      },
      destinations: const [
        NavigationDestination(icon: Icon(Icons.shelves), label: 'Library'),
        NavigationDestination(
          icon: Icon(Icons.menu_book_outlined),
          label: 'Reading',
        ),
        NavigationDestination(
          icon: Icon(Icons.calendar_month_outlined),
          label: 'Journal',
        ),
      ],
    ),
  );
}

...
